# GuiSimpsonGame

./: main.py  pyproject.toml  requirements.txt
assets/: how_to_play.txt  users.csv
config/: charecters.py
pages/: character_selection.py  coin_flip.py  game_play.py  leaderboard.py  result.py  sign_in.py
utils/: authonticate.py  character.py  page.py  spacer.py
