[tool.poetry]
name = "repl_python3_beta_SqueakyWholeApplicationserver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
guizero = "^1.3.0"
Pillow = "^9.0.1"
characters = "^0.1.0"
login = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
